syntax = "proto3";

package ai.lzy.v1;

import "ai/lzy/v1/common/slot.proto";
import "ai/lzy/v1/long-running/operation.proto";
import "ai/lzy/v1/long-running/option.proto";

option java_outer_classname = "LSA";
option java_package = "ai.lzy.v1.slots";

service LzySlotsApi {
  rpc CreateSlot (CreateSlotRequest) returns (CreateSlotResponse);

  rpc ConnectSlot (ConnectSlotRequest) returns (ai.lzy.v1.longrunning.Operation) {
    option (ai.lzy.v1.operation) = {
      metadata: "ConnectSlotMetadata"
      response: "ConnectSlotResponse"
    };
  }

  rpc DisconnectSlot (DisconnectSlotRequest) returns (DisconnectSlotResponse);

  rpc StatusSlot (StatusSlotRequest) returns (StatusSlotResponse);

  rpc DestroySlot (DestroySlotRequest) returns (DestroySlotResponse);

  rpc OpenOutputSlot (SlotDataRequest) returns (stream SlotDataChunk);
}

message CreateSlotRequest {
  string taskId = 1;
  ai.lzy.v1.common.Slot slot = 2;
  string channelId = 3;
}

message CreateSlotResponse {
}

message ConnectSlotRequest {
  ai.lzy.v1.common.SlotInstance from = 1;
  ai.lzy.v1.common.SlotInstance to = 2;
}

message ConnectSlotResponse {
}

message ConnectSlotMetadata {
}

message DisconnectSlotRequest {
  ai.lzy.v1.common.SlotInstance slotInstance = 1;
}

message DisconnectSlotResponse {
}

message StatusSlotRequest {
  ai.lzy.v1.common.SlotInstance slotInstance = 1;
}

message StatusSlotResponse {
  ai.lzy.v1.common.SlotStatus status = 1;
}

message DestroySlotRequest {
  ai.lzy.v1.common.SlotInstance slotInstance = 1;
  string reason = 2;
}

message DestroySlotResponse {
}

message SlotDataRequest {
  ai.lzy.v1.common.SlotInstance slotInstance = 1;
  int64 offset = 2;
}

message SlotDataChunk {
  enum Control {
    EOS = 0;
  }

  oneof kind {
    Control control = 1;
    bytes chunk = 2;
  }
}

